# gto

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  FlexLexer.cpp  FlexLexer.h  LICENSE  Makefile.am  Makefile.in  NEWS  Parser.h  README  RELEASE_VERSION  bootstrap  configure.in
doc/: .cvsignore  .gitignore  Makefile.am  gto.texi
elisp/: gto-mode.el
examples/: plane.gto
lib/: Makefile.am
lib/GelGto/: DataBase.cpp  DataBase.h  Exception.h  Makefile  Makefile.am  NURBS.cpp  NURBS.h  Object.cpp  Object.h  OnOffList.cpp  OnOffList.h  Plugin.cpp  Plugin.h  Poly.cpp  Poly.h  README  Reader.cpp  Reader.h  Set.cpp  Set.h  Strand.cpp  Strand.h  Subd.cpp  Subd.h
lib/Gto/: .gitignore  EXTProtocols.h  FlexLexer.cpp  FlexLexer.h  Header.h  Lexer.l  Makefile.am  Parser.cpp  Parser.h  Parser.y  Protocols.h  RawData.cpp  RawData.h  Reader.cpp  Reader.h  Utilities.cpp  Utilities.h  Writer.cpp  Writer.h  zhacks.cpp  zhacks.h
lib/Gto/test/: Makefile.am  main.cpp
lib/GtoContainer/: Component.cpp  Component.h  Exception.h  Foundation.h  Makefile.am  ObjectVector.cpp  ObjectVector.h  Property.cpp  Property.h  PropertyContainer.cpp  PropertyContainer.h  Protocol.h  Reader.cpp  Reader.h  StdProperties.cpp  StdProperties.h  TypedProperty.h  Utilities.h  Writer.cpp  Writer.h
lib/GtoContainer/test/: Makefile.am  main.cpp
lib/GtoGraph/: Attribute.h  AttributeGroup.h  Connection.h  Container.h  Context.h  Graph.h  Imath.cpp  Imath.h  test.cpp
lib/RiGto/: ChangeLog  Makefile.am  RiGtoDataBase.cpp  RiGtoDataBase.h  RiGtoException.h  RiGtoNURBS.cpp  RiGtoNURBS.h  RiGtoObject.cpp  RiGtoObject.h  RiGtoOnOffList.cpp  RiGtoOnOffList.h  RiGtoPlugin.cpp  RiGtoPlugin.h  RiGtoPoly.cpp  RiGtoPoly.h  RiGtoReader.cpp  RiGtoReader.h  RiGtoSet.cpp  RiGtoSet.h  RiGtoStrand.cpp  RiGtoStrand.h  RiGtoSubd.cpp  RiGtoSubd.h
lib/RiGtoStub/: Makefile.am  Stubs.cpp  Stubs.h
lib/WFObj/: Grammar.cpp  Grammar.h  Grammar.y  Lexer.cpp  Lexer.l  Makefile.am  Reader.cpp  Reader.h
patches/: README  lucas-patch
plugins/: Makefile.am
plugins/gelato/gto.generator/: Makefile.am  plugin.cpp
plugins/houdini/ggto/: GtoAttribute.h  NURBS.h  Object.cpp  Object.h  Particle.cpp  Particle.h  Poly.cpp  Poly.h  README.txt  main.cpp
plugins/houdini/ggto/examples/: particles.geo  particles.gto  test_ggto.csh
plugins/houdini/ggto_h9.1/: NURBS.cpp  NURBS.h  Object.cpp  Particle.h  Poly.cpp  Poly.h  README.txt  main.cpp
plugins/houdini/ggto_h9.1/examples/: test_ggto.csh
plugins/maya/: GtoAnimCurve.cpp  GtoAnimCurve.h  GtoIO.cpp  GtoIO.h  GtoInDataBase.cpp  GtoInDataBase.h  GtoInNURBS.cpp  GtoInNURBS.h  GtoInObject.cpp  GtoInObject.h  GtoInParticle.cpp  GtoInParticle.h  GtoInPoly.cpp  GtoInPoly.h  GtoInReader.cpp  GtoInReader.h  GtoInSet.cpp  GtoInSet.h  GtoInTransform.cpp  GtoInTransform.h  GtoMayaAttribute.cpp  GtoMayaAttribute.h  GtoOut.cpp  GtoOut.h  Makefile.am  TwkMaya.h  gtoExportOptions.mel  gtoExportSet.mel  version.cpp  version.h
plugins/maya/GtoCacheEmitter/: GtoCacheEmitter.cpp  GtoCacheEmitter.h  Makefile.am  gtoCacheEmitter.mel
plugins/maya/GtoDeformer/: AEGtoDefomerCommon.mel  AEGtoDefomerTemplate.mel  GtoDeformer.cpp  GtoDeformer.h  GtoPointReader.cpp  GtoPointReader.h  Makefile.am  applyGtoDeformer.mel  pluginMain.cpp
plugins/maya/GtoParticleDisplay/: AEGtoParticleDisplayCommon.mel  AEGtoParticleDisplayInclude.mel  AEGtoParticleDisplayTemplate.mel  GtoParticleDisplay.cpp  GtoParticleDisplay.h  Makefile.am  doGtoParticleDisplay.mel  pluginMain.cpp
plugins/maya/GtoParticleExport/: GtoParticleExport.cpp  GtoParticleExport.h  GtoParticleExportUI.mel  Makefile.am  ParticleAttribute.cpp  ParticleAttribute.h  ParticleBucket.cpp  ParticleBucket.h
plugins/maya/config/plug-ins/: buildconfig
plugins/maya/gtoIO/: GtoAnimCurve.cpp  GtoAnimCurve.h  GtoIO.cpp  GtoIO.h  GtoInCamera.cpp  GtoInCamera.h  GtoInDataBase.cpp  GtoInDataBase.h  GtoInNURBS.cpp  GtoInNURBS.h  GtoInObject.cpp  GtoInObject.h  GtoInParticle.cpp  GtoInParticle.h  GtoInPoly.cpp  GtoInPoly.h  GtoInReader.cpp  GtoInReader.h  GtoInSet.cpp  GtoInSet.h  GtoInTransform.cpp  GtoInTransform.h  GtoMayaAttribute.cpp  GtoMayaAttribute.h  GtoOut.cpp  GtoOut.h  Makefile.am  TwkMaya.cpp  TwkMaya.h  gtoExportOptions.mel  version.cpp  version.h
plugins/prman/: Makefile.am  RiGtoDataBase.h  RiGtoObject.cpp  RiGtoPlugin.cpp  RiGtoSet.cpp  RiGtoStrand.h  Stubs.h  plugin.cpp
plugins/python/: setup.py
plugins/python/examples/: example.py  example2.py  gtoDB_example.py  test_gtoDB.py
plugins/python/src/: gtoHeader.cpp  gtoHeader.h  gtoReader.cpp  gtoReader.h  gtoWriter.cpp  gtoWriter.h  gtomodule.cpp  gtomodule.h
plugins/python/src/gto/: gtoHeader.cpp  gtoHeader.h  gtoReader.cpp  gtoReader.h  gtoWriter.cpp  gtoWriter.h  gtomodule.cpp  gtomodule.h
plugins/python/src/gtoDB/: Component.i  GtoDB.h  Object.i  Property.i  RawData.i  gtoDB.cpp  gtoDB.i  gtoDB.py  main.i  run_swig  swig.cpp
plugins/rman/: Makefile.am  RiGtoException.h  RiGtoNURBS.cpp  RiGtoOnOffList.cpp  RiGtoOnOffList.h  RiGtoPlugin.cpp  RiGtoPlugin.h  RiGtoPoly.cpp  RiGtoPoly.h  RiGtoReader.cpp  RiGtoReader.h  RiGtoSet.h  RiGtoSubd.cpp  RiGtoSubd.h  Stubs.cpp  plugin.cpp
python/gtoContainer/: example.py  gtoContainer.py  gtomerge.py
