#*******************************************************************************
# Copyright (c) 2001-2003 Tweak Inc. All rights reserved.
#*******************************************************************************
## Process this file with automake to produce Makefile.in

SUBDIRS = lib bin doc

EXTRA_DIST = examples/plane.gto examples/cube.gto
