#*******************************************************************************
# Copyright (c) 2001-2003 Tweak Inc. All rights reserved.
#*******************************************************************************
## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = 1.7.5

SUBDIRS = lib bin doc plugins

EXTRA_DIST = examples/plane.gto examples/cube.gto
