#*******************************************************************************
# Copyright (c) 2001-2003 Tweak Inc. All rights reserved.
#*******************************************************************************
## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = 1.7.5

SUBDIRS = lib bin doc plugins

EXTRA_DIST = examples/plane.gto				\
             examples/cube.gto				\
             plugins/python/setup.py			\
             plugins/python/src/gtoHeader.cpp		\
             plugins/python/src/gtoHeader.h		\
             plugins/python/src/gtomodule.cpp		\
             plugins/python/src/gtomodule.h		\
             plugins/python/src/gtoReader.cpp		\
             plugins/python/src/gtoReader.h		\
             plugins/python/src/gtoWriter.cpp		\
             plugins/python/src/gtoWriter.h		\
             plugins/python/examples/example.py		\
             plugins/python/examples/example2.py	\
	     plugins/maya/GtoInDataBase.h		\
	     plugins/maya/GtoInNURBS.h			\
	     plugins/maya/GtoInObject.h			\
	     plugins/maya/GtoInParticle.h		\
	     plugins/maya/GtoInPoly.h			\
	     plugins/maya/GtoInReader.h			\
	     plugins/maya/GtoInSet.h			\
	     plugins/maya/GtoInTransform.h		\
	     plugins/maya/GtoIO.h			\
	     plugins/maya/GtoOut.h			\
	     plugins/maya/version.h
