#*******************************************************************************
# Copyright (c) 2001-2003 Tweak Inc. All rights reserved.
#*******************************************************************************
## Process this file with automake to produce Makefile.in

SUBDIRS = Gto

nobase_include_HEADERS = Gto/EXTProtocols.h \
                         Gto/Header.h \
                         Gto/Protocols.h \
                         Gto/RawData.h \
                         Gto/Reader.h \
                         Gto/Utilities.h \
                         Gto/Writer.h
