#*******************************************************************************
# Copyright (c) 2001-2003 Tweak Inc. All rights reserved.
#*******************************************************************************
## Process this file with automake to produce Makefile.in

SUBDIRS = Gto WFObj RiGto RiGtoStub GtoContainer

nobase_include_HEADERS = Gto/EXTProtocols.h \
                         Gto/Header.h \
                         Gto/Protocols.h \
                         Gto/RawData.h \
                         Gto/Reader.h \
                         Gto/Utilities.h \
                         Gto/Writer.h \
                         GtoContainer/Component.h \
                         GtoContainer/Exception.h \
                         GtoContainer/Foundation.h \
                         GtoContainer/ObjectVector.h \
                         GtoContainer/Property.h \
                         GtoContainer/PropertyContainer.h \
                         GtoContainer/Protocol.h \
                         GtoContainer/Reader.h \
                         GtoContainer/StdProperties.h \
                         GtoContainer/TypedProperty.h \
                         GtoContainer/Utilities.h \
                         GtoContainer/Writer.h
