#*******************************************************************************
# Copyright (c) 2001-2003 Tweak Inc. All rights reserved.
#*******************************************************************************
## Process this file with automake to produce Makefile.in

SUBDIRS = maya

noinst_EXTRA_DIST = python/setup.py \
                    python/src/gtoHeader.cpp \
                    python/src/gtoHeader.h \
                    python/src/gtomodule.cpp \
                    python/src/gtomodule.h \
                    python/src/gtoReader.cpp \
                    python/src/gtoReader.h \
                    python/src/gtoWriter.cpp \
                    python/src/gtoWriter.h \
                    python/examples/example.py \
                    python/examples/example2.py

