#*******************************************************************************
# Copyright (c) 2001-2003 Tweak Inc. All rights reserved.
#*******************************************************************************
## Process this file with automake to produce Makefile.in

SUBDIRS = 

if GTO_BUILD_MAYA
SUBDIRS += maya
endif

if GTO_BUILD_RMAN
SUBDIRS += rman
endif

