
## Process this file with automake to produce Makefile.in

AM_CPPFLAGS = -I$(top_srcdir)/lib

SUBDIRS = test

lib_LTLIBRARIES = libGtoContainer.la

libGtoContainer_la_SOURCES = Component.cpp ObjectVector.cpp Property.cpp PropertyContainer.cpp Reader.cpp StdProperties.cpp Writer.cpp 

libGtoContainer_la_LIBS = @LIBS@

