#*******************************************************************************
# Copyright (c) 2001-2003 Tweak Inc. All rights reserved.
#*******************************************************************************
## Process this file with automake to produce Makefile.in

AM_CPPFLAGS = -I$(top_srcdir)/lib

lib_LTLIBRARIES = libRiGtoStub.la

libRiGto_la_SOURCES = Stubs.cpp

noinst_HEADERS = Stubs.h

libRiGto_la_LIBS = @LIBS@

